Added Debugger Toggle

--- a/gmbuild/config.json
+++ b/gmbuild/config.json
@@ -1,4 +1,6 @@
 {
     "name": "gmbuild",
-    "scripts": ["gmbuild.js"]
+    "scripts": ["gmbuild.js"],
+    "stylesheets": [],
+    "dependencies": []
 }
